updated MongoDb version

--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
-            <version>3.4.2</version>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.14</version>
         </dependency>
+
     </dependencies>
 
     <properties>
